# zhongshu

./: .gitignore  AGENTS.md  ANCHORED_SUMMARY.md  ANTI_FAKE_AGENTS.md  ARCHITECTURE_FUNCTION_REVIEW.md  Cargo.toml  LICENSE  PROJECT_DIFF_REVIEW_6baecc6_HEAD.md  README.md  ROADMAP.md  TRAY_ORB_ANIMATION_REVIEW.md
.github/workflows/: ci.yml
benchmarks/organization-v1/: README.md  suite.json
benchmarks/review-v1/: README.md  suite.json
docs/: architecture.md  runtime-ownership.md
fixtures/capability/cross-module-refactor/: replay.json
fixtures/capability/failing-unit/: replay.json
fixtures/capability/failure-recovery/: replay.json
fixtures/capability/mcp-tool-extension/: replay.json
fixtures/capability/multi-file-api/: replay.json
fixtures/capability/worker-conflict/: replay.json
xtask/: Cargo.toml
xtask/src/: architecture_check.rs  benchmark.rs  main.rs
zhongshu-cli/: Cargo.toml
zhongshu-cli/src/: main.rs
zhongshu-core/: Cargo.toml
zhongshu-core/examples/: harness_theater.rs
zhongshu-core/src/: digest.rs  heartbeat.rs  lib.rs  rule.rs  source.rs
zhongshu-core/src/action/: dispatcher.rs  journal.rs  lifecycle.rs  mod.rs  policy.rs
zhongshu-core/src/agent/: attention.rs  attention_manager.rs  auto_delegation.rs  contract.rs  delegation.rs  dispatcher.rs  entry.rs  execution_graph.rs  intent.rs  llm.rs  llm_registry.rs  loop_.rs  mod.rs  orchestrator.rs  organization.rs  profile.rs  report.rs  router.rs  run.rs  runtime.rs  sandbox.rs  sandbox_backend.rs  worker.rs
zhongshu-core/src/agent/llm/: openai.rs  scripted.rs
zhongshu-core/src/authority/: mod.rs
zhongshu-core/src/coding/: mod.rs
zhongshu-core/src/core/: checkpoint.rs  context.rs  db.rs  execution_runner.rs  ledger.rs  mod.rs  models.rs  receipt.rs  reconciliation.rs  runbook.rs  tests.rs
zhongshu-core/src/core/artifact/: mod.rs  repository.rs
zhongshu-core/src/core/event/: mod.rs
zhongshu-core/src/core/goal/: mod.rs  repository.rs  tool.rs
zhongshu-core/src/core/memory/: candidate.rs  mod.rs  policy.rs  policy_candidate.rs  skill_candidate.rs  tool.rs
zhongshu-core/src/core/observation/: mod.rs  store.rs
zhongshu-core/src/core/scheduler/: mod.rs
zhongshu-core/src/core/suggestion/: engine.rs  mod.rs  tool.rs
zhongshu-core/src/core/task/: mod.rs  planner.rs  repository.rs  tool.rs
zhongshu-core/src/desktop/: clipboard.rs  mod.rs  notification.rs  os.rs
zhongshu-core/src/equipment/: builtin.rs  manifest.rs  mcp.rs  mod.rs  observer.rs  permission.rs  registry.rs
zhongshu-core/src/event/: mod.rs
zhongshu-core/src/harness/: action.rs  context.rs  context_engine.rs  mod.rs  phase.rs  render.rs  state.rs
zhongshu-core/src/harness/architecture/: api.rs  boundary.rs  config.rs  diff.rs  feedback.rs  graph.rs  impact.rs  index.rs  layer.rs  mod.rs  repo_intelligence.rs  rules.rs  rust_ast.rs  semantic.rs  symbol.rs  violation.rs
zhongshu-core/src/harness/architecture/parser/: csharp.rs  generic.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs
zhongshu-core/src/harness/context_pack/: audit.rs  authority.rs  budget.rs  evidence.rs  mod.rs  project_map.rs  working_set.rs
zhongshu-core/src/harness/recovery/: feedback.rs  fingerprint.rs  mod.rs  no_progress.rs  patch_history.rs  policy.rs  strategy.rs
zhongshu-core/src/harness/tool/: approval.rs  contract.rs  effect.rs  loop_guard.rs  mod.rs  observation.rs  policy.rs  transaction.rs  validate.rs
zhongshu-core/src/harness/trace/: event.rs  ledger.rs  mod.rs  runbook.rs  snapshot.rs
zhongshu-core/src/harness/verification/: claim.rs  classify.rs  execute.rs  gate.rs  ledger.rs  mod.rs  plan.rs  proof.rs
zhongshu-core/src/integration/: deeplossless.rs  mod.rs
zhongshu-core/src/patch/: mod.rs
zhongshu-core/src/runtime/: cancellation.rs  mod.rs  profile.rs  record.rs
zhongshu-core/src/task/: mod.rs
zhongshu-core/src/tool/: automation.rs  browser.rs  browser_automation.rs  browser_session.rs  executor.rs  fs.rs  memory.rs  mod.rs  screenshot.rs  search.rs  search_files.rs  self_test.rs  shell.rs  shell_semantics.rs  spec.rs  system_info.rs  webfetch.rs
zhongshu-core/tests/: contract.rs  execution_recovery_process.rs  harness_attack.rs  harness_attack_browser.rs  harness_attack_edit.rs  harness_attack_equipment.rs  harness_attack_filesystem.rs  harness_attack_shell.rs  harness_attack_verify.rs  organization_staffing.rs  smoke.rs
zhongshu-message-core/: Cargo.toml
zhongshu-message-core/src/: block.rs  lib.rs  parser.rs  streaming.rs
zhongshu-orb/: Cargo.toml
zhongshu-orb/assets/: chat.html
zhongshu-orb/src/: agent.rs  app.rs  auto_delegation_service.rs  config.rs  delegation_service.rs  gpu.rs  handler.rs  hotkey.rs  indicator.rs  main.rs  organization_service.rs  overlay.rs  overlay_assets.rs  overlay_contract.rs  overlay_host.rs  overlay_macos.rs  overlay_stub.rs  overlay_windows.rs  render.rs  services.rs
zhongshu-orb/tests/: smoke_test.rs
zhongshu-orb/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
zhongshu-orb/ui/src/: App.test.tsx  App.tsx  main.tsx  styles.css
zhongshu-orb/ui/src/components/: ApprovalBar.tsx
zhongshu-orb/ui/src/components/chat/: ChatStream.tsx  Composer.tsx  ToolCallGroup.tsx  renderMarkdown.tsx
zhongshu-orb/ui/src/components/coding/: ChangeSetPanel.tsx  CodingWorkbench.test.tsx  CodingWorkbench.tsx  DagControlPanel.tsx  DiffViewer.test.tsx  DiffViewer.tsx  RunSummary.test.tsx  RunSummary.tsx
zhongshu-orb/ui/src/components/onboarding/: StartupGate.tsx
zhongshu-orb/ui/src/components/organization/: OrganizationDialog.tsx
zhongshu-orb/ui/src/components/panels/: AuthHistoryPanel.tsx  ChromeStatusCard.tsx  CompressionView.tsx  DebugPanel.tsx  MemoryPanel.tsx  PanelHost.tsx
zhongshu-orb/ui/src/components/resources/: ResourceDialog.tsx
zhongshu-orb/ui/src/components/settings/: SettingsDialog.tsx
zhongshu-orb/ui/src/dev/: fixtures.ts
zhongshu-orb/ui/src/ipc/: bridge.test.ts  bridge.ts  commands.test.ts  commands.ts  events.ts
zhongshu-orb/ui/src/state/: chatReducer.test.ts  chatReducer.ts  codingReducer.test.ts  codingReducer.ts
(+15 files in other folders)
