[package]
name = "zhongshu-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "中书 CLI — command-line interface for the zhongshu desktop AI assistant."

[dependencies]
zhongshu-core = { path = "../zhongshu-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
