[package]
name = "zhongshu-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "中书 — record and convey. Core runtime for the zhongshu desktop AI assistant."

[features]
default = []
windows-full = ["dep:windows"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
notify-rust = "4"
open = "5"
xcap = "0.3"
image = "0.25"
sha2 = "0.10"
hex = "0.4"
deeplossless = "=0.6.8"
rusqlite = { version = "0.34", features = ["bundled"] }
sysinfo = "0.33"
axum = "0.8"
encoding_rs = "0.8"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
enigo = { version = "0.4", default-features = false, features = ["serde", "x11rb"] }

[target.'cfg(target_os = "windows")'.dependencies]
enigo = { version = "0.4", default-features = false, features = ["serde"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_Media_Speech",
], optional = true }
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "winbase", "fileapi", "shellapi", "errhandlingapi", "synchapi"] }
