[package]
name = "zhongshu-message-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "中书 Message Rendering Engine — AI output as AST, not string."

[dependencies]
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
