[package]
name = "zhongshu-orb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "中书 Orb — desktop overlay companion for zhongshu."

[dependencies]
zhongshu-core = { path = "../zhongshu-core" }
zhongshu-message-core = { path = "../zhongshu-message-core" }
winit = "0.30"
wry = "0.55"
gtk = "0.18"
glib = "0.18"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
once_cell = "1"
http = "1"
global-hotkey = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ksni = "0.3"
softbuffer = "0.4"
notify-rust = "4"
