[package]
name = "zhongshu-orb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "中书 Orb — desktop overlay companion for zhongshu."

[dependencies]
zhongshu-core = { path = "../zhongshu-core" }
zhongshu-message-core = { path = "../zhongshu-message-core" }
winit = "0.30"
wry = "0.55"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
once_cell = "1"
http = "1"
global-hotkey = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ksni = "0.3"
softbuffer = "0.4"
notify-rust = "4"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
glib = "0.18"
